--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ plugins {
 
 def twaManifest = [
     applicationId: 'io.github.venubalan_t.twa',
-    hostName: 'venubalan-t.github.io', // The domain being opened in the TWA.
-    launchUrl: '/demo-app/', // The start path for the TWA. Must be relative to the domain.
+    hostName: 'chatapp-5a00d.web.app', // The domain being opened in the TWA.
+    launchUrl: '/', // The start path for the TWA. Must be relative to the domain.
     name: 'Demo App', // The application name.
     launcherName: 'main', // The name shown on the Android Launcher.
     themeColor: '#000000', // The color used for the status bar.
@@ -57,8 +57,8 @@ android {
         applicationId "io.github.venubalan_t.twa"
         minSdkVersion 21
         targetSdkVersion 35
-        versionCode 2
-        versionName "2"
+        versionCode 4
+        versionName "4"
 
         // The name for the application
         resValue "string", "appName", twaManifest.name
@@ -74,12 +74,12 @@ android {
             // The URL the Web Manifest for the Progressive Web App that the TWA points to. This
             // is used by Chrome OS and Meta Quest to open the Web version of the PWA instead of
             // the TWA, as it will probably give a better user experience for non-mobile devices.
-            resValue "string", "webManifestUrl", 'https://venubalan-t.github.io/demo-app/manifest.webmanifest'
+            resValue "string", "webManifestUrl", 'https://chatapp-5a00d.web.app/manifest.webmanifest'
         
 
         
             // This is used by Meta Quest.
-            resValue "string", "fullScopeUrl", 'https://venubalan-t.github.io/demo-app/'
+            resValue "string", "fullScopeUrl", 'https://chatapp-5a00d.web.app/'
         
 
         
